chore: add login endpoint + its tests
