# packages/backend/auth/src/lib/auth.controller.ts
@@ -2,16 +2,22 @@ import { ErrorResponse } from '@backend/common';
 import {
   Body,
   Controller,
+  Get,
+  HttpRedirectResponse,
   InternalServerErrorException,
   Post,
+  Redirect,
+  Res,
 } from '@nestjs/common';
 import {
   ApiBadRequestResponse,
   ApiCreatedResponse,
   ApiInternalServerErrorResponse,
+  ApiOkResponse,
   ApiOperation,
   ApiTags,
 } from '@nestjs/swagger';
+import { Response } from 'express';
 import { RegisterDto } from './dtos/register.dto';
 import { AuthService } from './services/auth.service';
 
@@ -42,5 +48,28 @@ export class AuthController {
       ...registerDto,
       groups: [],
     });
+  }
+
+  @Get('login')
+  @Redirect()
+  @ApiOperation({
+    summary:
+      'This endpoint creates login URL with all necessary configurations.',
+  })
+  @ApiOkResponse({
+    description:
+      'User will be redirected to the generated login URL.',
+  })
+  @ApiInternalServerErrorResponse({
+    type: InternalServerErrorException,
+    description: 'Internal server error',
+  })
+  login(@Res() response: Response): HttpRedirectResponse {
+    const loginRedirectUrl = this.authService.login(response);
+
+    return {
+      statusCode: 302,
+      url: loginRedirectUrl,
+    };
   }
 }
